--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "4.6.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "axios": "^1.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
