--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/vue-2": "^2.0.3",
     "axios": "^1.1.3",
     "bootstrap": "4.6.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "tiptap": "^1.32.2",
+    "tiptap-extensions": "^1.35.2",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2",
@@ -28,6 +35,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
