--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vue2-editor": "^2.10.3",
