--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^8.0.0",
+    "quill-image-extend-module": "^1.1.2",
     "sass-loader": "^13.2.2",
     "vue-template-compiler": "^2.6.14"
   }
