--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "4.6.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
+    "save": "^2.9.0",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
     "vue": "^2.6.14",
