--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "sal.js": "^0.8.5",
     "save": "^2.9.0",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
